--- a/collections.html
+++ b/collections.html
@@ -93,7 +93,7 @@
                 </div>
 
                 <div class="gallery-item gallery-item-1x1">
-                    <img src="C:\Users\adars\Downloads\templatemo_611_maison_doree\templatemo_611_maison_doree\images\IMG-20250724-WA0115.jpg copy.jpeg" alt="Artisan Collection">
+                    <img src="D:\floralia\images\IMG-20250724-WA0115.jpg copy.jpeg" alt="Artisan Collection">
                     <div class="gallery-overlay">
                         <h3>Artisan Collection</h3>
                     </div>
